--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ "scripts": {
+      "seed:dev": "nodemon ./db/seed.js"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node": "^19.2.0"
+    "node": "^19.2.0",
+    "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
